--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,4 +29,4 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - name: 'Create env file'
-    - run: echo "${{ secrets.ENV_FILE }}" > .env
+    - run: echo "${{ secrets.MONGO_URL }}" > .env
