--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,4 +29,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - name: 'Create env file'
-    - run: echo "${{ secrets.MONGO_URL }}" > .env
+      env:
+        MONGO_URL: ${{ secrets.MONGO_URL }}
+      run: |
+        echo MONOGO_URL > .env
