--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,3 +33,5 @@ jobs:
         MONGO_URL: ${{ secrets.MONGO_URL }}
       run: |
         echo "MONGO_URL=$MONGO_URL" > .env
+    - name: Starting server
+      run: pm2 restart 0 
